<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout"
    android:orientation="vertical"
    android:padding="40dp" >

<RelativeLayout
    android:layout_width="280dp"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:padding="2dp" >

	<EditText
	    android:id="@+id/editText_name"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp"
	    android:ems="10"
	    android:hint="@string/edit_name"
	    android:singleLine="true"
	    android:textColorHint="@color/white"
	    android:textSize="15sp" >

        <requestFocus />
    </EditText>

	<EditText
	    android:id="@+id/editText_description"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/editText_name"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp"
	    android:ems="10"
	    android:hint="@string/edit_description"
	    android:singleLine="true"
	    android:textColorHint="@color/white"
	    android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_time_reminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/editText_description"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_time_reminder"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switch_time_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_time_reminder"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/textView_time_reminder" />

    <RelativeLayout
        android:id="@+id/RLtimeReminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_time_reminder"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/button_reminderDetails"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RLlocationReminder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_time_reminder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView_location_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:text="@string/textView_location_reminder"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_location_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textView_location_reminder"
            android:layout_alignTop="@id/textView_location_reminder"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:duplicateParentState="true" />

        <RelativeLayout
            android:id="@+id/RLsubLocationReminder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_location_reminder"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/button_select_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/select_address_button" />

            <TextView
                android:id="@+id/textView_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/button_select_address"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/textView_leave"
                android:textSize="15sp"
                android:textStyle="italic"/>

            <CheckBox
                android:id="@+id/checkBox_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textView_leave"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/textView_arrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textView_leave"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:text="@string/textView_arrive"
                android:textSize="15sp"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/checkBox_arrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textView_arrive"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
</LinearLayout>